<resources>
    <string name="app_name">IKEA Queueless Checkout</string>

    <string name="subpage_products">Products</string>
    <string name="subpage_settings">Settings</string>
    <string name="subpage_shoppinglist">Shopping List</string>
    <string name="subpage_login">Log in</string>
    <string name="subpage_payment">Pay online</string>

    <string name="total">Total</string>
    <string name="total2">Total to pay</string>
    <string name="priceText">£0.00</string>
    <string name="priceList">£53.75</string>
    <string name="shopListProdCat1">Cooking &amp; Eating</string>
    <string name="shopListProdCat2">Self-Service</string>
    <string name="shopListProdCat2Description">The location is pick-up only. You won\'t be able to see and try products in Self Serve.</string>
    <string name="shoppingConfirmation">Confirm your products</string>
</resources>
