<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.android.ikeaqueuelesscheckout.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.84"
            android:background="#E7EFEF">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                //store
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitStart"
                    android:src="@drawable/store_name" />

                //product category heading
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/white"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:adjustViewBounds="true"
                    android:layout_marginLeft="16dp"
                    android:scaleType="fitStart"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/prodlisticon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textSize="18sp"
                    android:layout_marginLeft="12dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center_vertical"
                    android:text="@string/shopListProdCat1"/>

            </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="8dp"
                    android:background="#0051BA"/>
                //end of prod category head

                //product1
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:id="@+id/item1"
                        android:onClick="itemCollected"
                        android:longClickable="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/item1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="8dp"
                        android:background="#EEEEEE"/>

                </LinearLayout>

                //product category heading
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@android:color/white"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:adjustViewBounds="true"
                        android:layout_marginLeft="16dp"
                        android:scaleType="fitStart"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/prodlisticon"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:textSize="18sp"
                        android:layout_marginLeft="12dp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center_vertical"
                        android:text="@string/shopListProdCat2"/>

                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/shopListProdCat2Description"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="8dp"
                    android:background="#0051BA"/>
                //end of prod category head

                //product 2
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:id="@+id/item2"
                        android:onClick="itemCollected"
                        android:longClickable="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/item2"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="8dp"
                        android:background="#EEEEEE"/>

                </LinearLayout>

                //product 3
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="centerInside"
                        android:id="@+id/item3"
                        android:longClickable="true"
                        android:onClick="itemCollected"
                        android:src="@drawable/item3"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="8dp"
                        android:background="#EEEEEE"/>



                </LinearLayout>

                //summary buttons
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:layout_width="match_parent"
                        android:id="@+id/payButton"
                        android:layout_height="50dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginBottom="16dp"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:text="pay for collected products"
                        android:background="@android:color/white"/>

                    <Button
                        android:layout_width="match_parent"
                        android:id="@+id/clearList"
                        android:layout_height="50dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginBottom="30dp"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:text="clear shopping list"
                        android:background="#F85157"/>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.06"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/total"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_toRightOf="@id/total"
                android:text="@string/priceList"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/total2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toLeftOf="@id/price"
                android:text="@string/total2"
                android:textAllCaps="true"
                android:textColor="#0f4c11"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="£0.00"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#0f4c11"
                android:textSize="18sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_weight="0.1"
            android:background="#0051BA"
            android:orientation="horizontal"
            android:weightSum="100">

            <ImageView
                android:id="@+id/mainScreen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="25"
                android:src="@drawable/butt1" />

            <ImageView
                android:id="@+id/productsScreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="25"
                android:src="@drawable/butt2" />

            <ImageView
                android:id="@+id/listScreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="25"
                android:src="@drawable/butt3in" />

            <ImageView
                android:id="@+id/settingsScreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="25"
                android:src="@drawable/butt4" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
